--- a/docker/run/Dockerfile
+++ b/docker/run/Dockerfile
@@ -1,4 +1,4 @@
-FROM scratch
+FROM google/debian:wheezy
 
 MAINTAINER Cheng-Lung Sung <clsung@gmail.com>
 
@@ -8,4 +8,4 @@ ENV NATS_CLUSTER nats://localhost:4222/
 VOLUME /tmp
 VOLUME /mnt/extend-disk/tmp
 
-ENTRYPOINT ["/tailer", "-nats", "/tmp", "/mnt/extend-disk/tmp"]
+CMD ["/tailer", "--nats", "/tmp,/mnt/extend-disk/tmp"]
