add config.json for docker

--- a/docker/run/Dockerfile
+++ b/docker/run/Dockerfile
@@ -3,8 +3,10 @@ FROM google/debian:wheezy
 MAINTAINER Cheng-Lung Sung <clsung@gmail.com>
 
 ADD tailer /tailer
+ADD config.json /config.json
 
 ENV NATS_CLUSTER nats://localhost:4222/
+ENV TAILER_CONFIG
 VOLUME /tmp
 VOLUME /mnt/extend-disk/tmp
 
