default use config.json

--- a/docker/run/Dockerfile
+++ b/docker/run/Dockerfile
@@ -6,7 +6,7 @@ ADD tailer /tailer
 ADD config.json /config.json
 
 ENV NATS_CLUSTER nats://localhost:4222/
-ENV TAILER_CONFIG ""
+ENV TAILER_CONFIG config.json
 VOLUME /tmp
 VOLUME /mnt/extend-disk/tmp
 
