--- a/docker/run/Dockerfile
+++ b/docker/run/Dockerfile
@@ -1,6 +1,20 @@
-FROM google/debian:wheezy
+FROM alpine:3.3
 
 MAINTAINER Cheng-Lung Sung <clsung@gmail.com>
+
+# install glibc for executable
+RUN apk add --update curl && \
+	cd /tmp && \
+    curl -o glibc-2.21-r2.apk \
+        "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk" && \
+    curl -o glibc-bin-2.21-r2.apk \
+        "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-bin-2.21-r2.apk" && \
+    apk add --allow-untrusted \
+        glibc-2.21-r2.apk \
+        glibc-bin-2.21-r2.apk && \
+    /usr/glibc/usr/bin/ldconfig /lib /usr/glibc/usr/lib && \
+	rm -f glibc-2.21-r2.apk glibc-bin-2.21-r2.apk && \
+	apk del curl
 
 ADD tailer /tailer
 ADD config.json /config.json
