update docker image

--- a/docker/run/Dockerfile
+++ b/docker/run/Dockerfile
@@ -1,20 +1,21 @@
-FROM alpine:3.3
+FROM alpine:3.4
 
 MAINTAINER Cheng-Lung Sung <clsung@gmail.com>
 
+ENV GLIBC_VERSION 2.23-r3
+
 # install glibc for executable
 RUN apk add --update curl && \
-	cd /tmp && \
-    curl -o glibc-2.21-r2.apk \
-        "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk" && \
-    curl -o glibc-bin-2.21-r2.apk \
-        "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-bin-2.21-r2.apk" && \
-    apk add --allow-untrusted \
-        glibc-2.21-r2.apk \
-        glibc-bin-2.21-r2.apk && \
-    /usr/glibc/usr/bin/ldconfig /lib /usr/glibc/usr/lib && \
-	rm -f glibc-2.21-r2.apk glibc-bin-2.21-r2.apk && \
-	apk del curl
+    curl -Lo /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub && \
+    curl -Lo glibc.apk "https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}/glibc-${GLIBC_VERSION}.apk" && \
+    apk add glibc.apk && \
+    curl -Lo glibc-bin.apk "https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}/glibc-bin-${GLIBC_VERSION}.apk" && \
+    apk add glibc-bin.apk && \
+    /usr/glibc-compat/sbin/ldconfig /lib /usr/glibc-compat/lib && \
+    echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf &&\
+    apk del curl &&\
+    rm -rf glibc.apk glibc-bin.apk /var/cache/apk/*
+
 
 ADD tailer /tailer
 ADD config.json /config.json
